objects/Incentive_Logic__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It&apos;s custom setting to maintain Incentive Logic for PBI and Rebate. In case, Uitlity for a state is defined , then please create a other - &apos;statecode&apos; records for other utility for the same state. In case , nothing is defined for the state , system will assume no restriction and send everything.</description>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_To_FinEng__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To FinEng</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Incentive Logic</label>
</CustomObject>